docs-archive/apache-airflow-providers-google/16.0.0/_sources/_api/airflow/providers/google/cloud/triggers/dataproc/index.rst.txt
airflow.providers.google.cloud.triggers.dataproc
================================================

.. py:module:: airflow.providers.google.cloud.triggers.dataproc

.. autoapi-nested-parse::

   This module contains Google Dataproc triggers.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.triggers.dataproc.DataprocBaseTrigger
   airflow.providers.google.cloud.triggers.dataproc.DataprocSubmitTrigger
   airflow.providers.google.cloud.triggers.dataproc.DataprocClusterTrigger
   airflow.providers.google.cloud.triggers.dataproc.DataprocBatchTrigger
   airflow.providers.google.cloud.triggers.dataproc.DataprocDeleteClusterTrigger
   airflow.providers.google.cloud.triggers.dataproc.DataprocOperationTrigger


Module Contents
---------------

.. py:class:: DataprocBaseTrigger(region, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, polling_interval_seconds = 30, cancel_on_kill = True, delete_on_error = True)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Base class for Dataproc triggers.


   .. py:attribute:: region


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: polling_interval_seconds
      :value: 30



   .. py:attribute:: cancel_on_kill
      :value: True



   .. py:attribute:: delete_on_error
      :value: True



   .. py:method:: get_async_hook()


   .. py:method:: get_sync_hook()


.. py:class:: DataprocSubmitTrigger(job_id, **kwargs)

   Bases: :py:obj:`DataprocBaseTrigger`


   DataprocSubmitTrigger run on the trigger worker to perform create Build operation.

   :param job_id: The ID of a Dataproc job.
   :param project_id: Google Cloud Project where the job is running
   :param region: The Cloud Dataproc region in which to handle the request.
   :param gcp_conn_id: Optional, the connection ID used to connect to Google Cloud Platform.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param polling_interval_seconds: polling period in seconds to check for the status


   .. py:attribute:: job_id


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: get_task_instance(session)

      Get the task instance for the current task.

      :param session: Sqlalchemy session



   .. py:method:: get_task_state()
      :async:



   .. py:method:: safe_to_cancel()
      :async:


      Whether it is safe to cancel the external job which is being executed by this trigger.

      This is to avoid the case that `asyncio.CancelledError` is called because the trigger itself is stopped.
      Because in those cases, we should NOT cancel the external job.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: DataprocClusterTrigger(cluster_name, **kwargs)

   Bases: :py:obj:`DataprocBaseTrigger`


   DataprocClusterTrigger run on the trigger worker to perform create Build operation.

   :param cluster_name: The name of the cluster.
   :param project_id: Google Cloud Project where the job is running
   :param region: The Cloud Dataproc region in which to handle the request.
   :param gcp_conn_id: Optional, the connection ID used to connect to Google Cloud Platform.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param polling_interval_seconds: polling period in seconds to check for the status


   .. py:attribute:: cluster_name


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: get_task_instance(session)


   .. py:method:: get_task_state()
      :async:



   .. py:method:: safe_to_cancel()
      :async:


      Whether it is safe to cancel the external job which is being executed by this trigger.

      This is to avoid the case that `asyncio.CancelledError` is called because the trigger itself is stopped.
      Because in those cases, we should NOT cancel the external job.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



   .. py:method:: fetch_cluster()
      :async:


      Fetch the cluster status.



   .. py:method:: delete_when_error_occurred(cluster)
      :async:


      Delete the cluster on error.

      :param cluster: The cluster to delete.



.. py:class:: DataprocBatchTrigger(batch_id, **kwargs)

   Bases: :py:obj:`DataprocBaseTrigger`


   DataprocCreateBatchTrigger run on the trigger worker to perform create Build operation.

   :param batch_id: The ID of the build.
   :param project_id: Google Cloud Project where the job is running
   :param region: The Cloud Dataproc region in which to handle the request.
   :param gcp_conn_id: Optional, the connection ID used to connect to Google Cloud Platform.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param polling_interval_seconds: polling period in seconds to check for the status


   .. py:attribute:: batch_id


   .. py:method:: serialize()

      Serialize DataprocBatchTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: DataprocDeleteClusterTrigger(cluster_name, end_time, metadata = (), **kwargs)

   Bases: :py:obj:`DataprocBaseTrigger`


   DataprocDeleteClusterTrigger run on the trigger worker to perform delete cluster operation.

   :param cluster_name: The name of the cluster
   :param end_time: Time in second left to check the cluster status
   :param project_id: The ID of the Google Cloud project the cluster belongs to
   :param region: The Cloud Dataproc region in which to handle the request
   :param metadata: Additional metadata that is provided to the method
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account.
   :param polling_interval_seconds: Time in seconds to sleep between checks of cluster status


   .. py:attribute:: cluster_name


   .. py:attribute:: end_time


   .. py:attribute:: metadata
      :value: ()



   .. py:method:: serialize()

      Serialize DataprocDeleteClusterTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Wait until cluster is deleted completely.



.. py:class:: DataprocOperationTrigger(name, operation_type = None, **kwargs)

   Bases: :py:obj:`DataprocBaseTrigger`


   Trigger that periodically polls information on a long running operation from Dataproc API to verify status.

   Implementation leverages asynchronous transport.


   .. py:attribute:: name


   .. py:attribute:: operation_type
      :value: None



   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



